Bold tags, dates, few minor content changes

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -18,7 +18,7 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#speedometer2" />
       </svg>
-      High School Students
+      High School
     </a>
   </li>
 
@@ -27,7 +27,7 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#table" />
       </svg>
-      Middle School Students
+      Middle School
     </a>
   </li>
 
@@ -36,7 +36,7 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#grid" />
       </svg>
-      Primary School Students
+      Primary School
     </a>
   </li>
 
@@ -45,7 +45,7 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
-      Collegiate Students
+      Collegiate
     </a>
   </li>
 
@@ -63,7 +63,7 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
-      Community Educations
+      Public Awareness
     </a>
   </li>
 
@@ -695,7 +695,7 @@
         <h2 class="accordion-header" id="headingFifteen">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen"
             aria-expanded="true" aria-controls="collapseFifteen">
-            <b>Lab Safety and Security Session</b>
+            <b>Lab Safety and Security Session—Date: 14/09/23, 18/09/23, 19/09/23</b>
           </button>
         </h2>
         <div id="collapseFifteen" class="accordion-collapse collapse show" aria-labelledby="headingFifteen">
@@ -753,7 +753,7 @@
         <h2 class="accordion-header" id="heading">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">
-            <b>Debate Workshop on Biotechnology Ethics</b>
+            <b>Debate Workshop on Biotechnology Ethics— Date:13/09/23</b>
           </button>
         </h2>
         <div id="collapseSixteen" class="accordion-collapse collapse" aria-labelledby="headingSixteen">
@@ -861,7 +861,7 @@
           <h2 class="accordion-header" id="headingNineteen">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#collapseNineteen" aria-expanded="false" aria-controls="collapseNineteen">
-              <b>Webinar on “Computational Methods in Synthetic Biology”</b>
+              <b>Webinar on “Computational Methods in Synthetic Biology” — Date: 04/10/23</b>
             </button>
           </h2>
           <div id="collapseNineteen" class="accordion-collapse collapse" aria-labelledby="headingNineteen">
@@ -870,7 +870,7 @@
                 webinar as integrating computation with pure biological fields is relatively new. Therefore, college
                 students may need to be made aware of the potential of this emerging interdisciplinary topic. The
                 speaker, Olivia Gallup, is a DPhil student at the University of Oxford studying Synthetic Biology. She
-                covered topics ranging from <b>Biochemical reaction networks to genetic circuits</b>. Post the webinar, there
+                covered topics ranging from <b>biochemical reaction networks to genetic circuits</b>. Post the webinar, there
                 was a question session where doubts were cleared.</p>
                       <img
                         src="https://static.igem.wiki/teams/4641/wiki/education/screenshot-from-the-webinar-with-olivia-gallup-on-computational-methods-in-synthetic-biology.png"
@@ -896,7 +896,7 @@
             <h2 class="accordion-header" id="headingEighteen">
               <button class="accordion-button" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseEighteen" aria-expanded="true" aria-controls="collapseEighteen">
-                <b>The Rotary Club of Coimbatore Metropolis, Coimbatore</b>
+                <b>The Rotary Club of Coimbatore Metropolis, Coimbatore— Date: 20/06/23</b>
               </button>
             </h2>
             <div id="collapseEighteen" class="accordion-collapse collapse show" aria-labelledby="headingEighteen">
@@ -1020,7 +1020,7 @@
             <h2 class="accordion-header" id="headingTwentyone">
               <button class="accordion-button" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwentyone" aria-expanded="true" aria-controls="collapseTwentyone">
-                <b>Bioremediation Conclave</b>
+                <b>Bioremediation Conclave— Date: 07/09/23 to 09/09/23</b>
               </button>
             </h2>
             <div id="collapseTwentyone" class="accordion-collapse collapse show" aria-labelledby="headingTwentyone">
@@ -1043,7 +1043,7 @@
             <h2 class="accordion-header" id="headingTwentyTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwentyTwo" aria-expanded="false" aria-controls="collapseTwentyTwo">
-                <b>We Made it to the News!</b>
+                <b>We Made it to the News! — Date:08/10/23</b>
               </button>
             </h2>
             <div id="collapseTwentyTwo" class="accordion-collapse collapse" aria-labelledby="headingTwentyTwo">
@@ -1113,12 +1113,12 @@
             <h2 class="accordion-header" id="headingTwentyFour">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwentyFour" aria-expanded="false" aria-controls="collapseTwentyFour">
-                <b>#SustainableSaturday with Green Yatra</b>
+                <b>#SustainableSaturday with Green Yatra— Date: 09/09/23</b>
               </button>
             </h2>
             <div id="collapseTwentyFour" class="accordion-collapse collapse" aria-labelledby="headingTwentyFour">
               <div class="accordion-body">
-                <p>On September 9th, 2023, we collaborated with Green Yatra to conduct a talk shedding light on the
+                <p>We collaborated with Green Yatra to conduct a talk shedding light on the
                   presence of hazardous chemicals, such as Triclocarban (TCC), in our personal care products. Green
                   Yatra, a prominent environmental NGO in India, is dedicated to advancing the Sustainable Development
                   Goals (SDGs) through tree planting, urban biodiversity preservation, water body restoration,
@@ -1206,7 +1206,7 @@
                   production byproducts into copper nanoparticles with applications in dentistry. This innovative
                   approach cleans up waste and produces valuable materials for compost and animal feed, showcasing the
                   sustainable potential of synthetic biology in waste treatment.<br>
-                  <b>Episode 3:</b> <br>
+                  <b>Episode 3:</b> The Oldest New Thing We Need <br>
                   Biochar, derived from biomass, is a carbon-rich substance with applications in carbon removal, soil
                   purification, water treatment, and more. Despite challenges like stability and heavy metal content, it
                   can capture significant CO2 and reduce greenhouse gasses. Nevertheless, biochar has immense potential
@@ -1344,13 +1344,13 @@
         <p class='mt-5 sub-stuff'> On many occasions, the differently-abled are excluded from science and technology.
           Science is for everyone. To bring fruition to our beliefs, we visited a rehabilitation center and interacted
           with the members at their homes.<br><br>
-          On 7 October 2023, our team visited the Asare Rehabilitation Centre—a home for the differently-abled. The
+          On <b>7 October, 2023</b>, our team visited the <b>Asare Rehabilitation Centre—a home for the differently-abled</b>. The
           senior special educator welcomed us to the institution and began by discussing how Asare houses people
           traditionally excluded from other homes. We then proceeded to provide crayons and coloring sheets to all the
           residents; they were coloring soap bottles. We used the subject of the coloring sheets as a starter for our
-          skit, which we conducted in the local language, Kannada, and introduced our year-long project, CarbanEL. We
-          used color changes in a beaker to signify how our project would work and, therefore, attempted to demonstrate
-          our project more interactively. We ended the session with some songs and answered the doubts raised by the
+          skit, which we conducted in the local language, Kannada, and introduced our year-long project, CarbanEl. We
+          used posters and color changes in a beaker to signify how our project would work and, therefore, attempted to demonstrate
+          our project more interactively. We ended the session with some songs and dance and answered the doubts raised by the
           residents about our project and other scientific terms. Through this visit, we understood that there are no
           barriers to understanding science, and their enthusiasm toward our initiative was enlivening.</p>
         <div id="carouselExampleControls8" class="carousel slide" data-ride="carousel">
@@ -1390,8 +1390,8 @@
           </a>
         </div>
         <p class='mt-5 MAIN-STUFF' id='section9'> Our Takeaway</p>
-        <p class='mt-5 sub-stuff'> For future teams to build upon and our biggest take away from our educational visits,
-          this is our “Guide to Education” for various age groups. <br><br>
+        <p class='mt-5 sub-stuff'> For the future teams to build upon and our biggest take away from our educational visits,
+          this is our <b>“Guide to Education”</b> for various age groups. <br><br>
           This is one of the major challenges faced by our team during our education sessions. The differences in age
           groups, regions and languages was something that one needs to keep in mind while planning a session.<br><br>
           From our educational visits across various states of India, we have realized a few things that need to be
