--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -1,6 +1,208 @@
 {% extends "my-layout.html" %}
   
 {% block sidebar_content %}
+<ul class="nav nav-pills flex-column mb-auto">
+  <li class="nav-item">
+    <a href="#section1" class="nav-link link-dark" aria-current="page">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#home" />
+      </svg>
+      TCC Detection: Preparation of Standards (Using Water as Solvent)
+    </a>
+  </li>
+<li>
+    <a href="#section2" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#speedometer2" />
+      </svg>
+      TCC Detection: Preparation of Standards (Using Acetone as Solvent)
+    </a>
+  </li>
+  <li>
+    <a href="#section3" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#table" />
+      </svg>
+      TCC Detection: Preparation of Standards (Using Acetonitrile as Solvent)
+    </a>
+  </li>
+  <li>
+    <a href="#section4" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#grid" />
+      </svg>
+      Reviving of Culture
+    </a>
+  </li>
+  <li>
+    <a href="#section5" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Confirmatory test- Catalase test
+    </a>
+  </li>
+
+  <li>
+    <a href="#section6" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Confirmatory test- Gram Staining
+    </a>
+  </li>
+
+  <li>
+    <a href="#section7" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Confirmatory test- Indole spot test
+    </a>
+  </li>
+
+    <li>
+    <a href="#section8" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Confirmatory test- Methyl Red and Voges-Proskauer test
+    </a>
+  </li>
+  <li>
+    <a href="#section9" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Preparation of Standards for TCC Detection (99% Water and 1% TCC + Acetonitrile)
+    </a>
+  </li>
+
+  <li>
+    <a href="#section10" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Growth curve for growth of bacteria in the presence of Acetonitrile
+    </a>
+  </li>
+
+  <li>
+    <a href="#section11" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Preparation of standards for TCC detection (for LCMS)
+    </a>
+  </li>
+
+  <li>
+    <a href="#section12" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Growth curve for culture at a chosen pH
+    </a>
+  </li>
+  <li>
+    <a href="#section13" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Dissolving Lyophilized IDT TccA Gene Fragment
+    </a>
+  </li>
+  <li>
+    <a href="#section14" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Dissolving lyophilized tccA primers
+    </a>
+  </li>
+  <li>
+    <a href="#section15" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      PCR Reaction Mix Preparation for TccA Gene Amplification
+    </a>
+  </li>
+  <li>
+    <a href="#section16" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Gradient PCR for TccA gene
+    </a>
+  </li>
+  <li>
+    <a href="#section17" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Plasmid Isolation
+    </a>
+  </li>
+  <li>
+    <a href="#section18" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      PCR cleanup
+    </a>
+  </li>
+  <li>
+    <a href="#section20" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Testing enzyme effectivity with single and and double digestion
+    </a>
+  </li>
+  <li>
+    <a href="#section21" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Gibson Assembly
+    </a>
+  </li>
+  <li>
+    <a href="#section22" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Competent cell preparation and Transformation of Gibson assembled tccA + pET22b+ to E.coli dh5alpha/BL21 using CaCl2 method
+    </a>
+  </li>
+  <li>
+    <a href="#section23" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Colony PCR
+    </a>
+  </li>
+  <li>
+    <a href="#section24" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      Running of Gel Electrophoresis
+    </a>
+  </li>
+  <li>
+    <a href="#section25" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#people-circle" />
+      </svg>
+      SDS-PAGE for protein analysis
+    </a>
+  </li>
+</ul>
+
+
 {% endblock %}
 
 {% block heading %}Experiments{% endblock %}
@@ -906,7 +1108,7 @@
                           <h2 class="accordion-header" id="headingThirteen">
                             <button style="font-family: 'Montserrat', sans-serif; font-size: 27px; font-weight: bold; color: #333; background: -webkit-linear-gradient(#8bedbb, #005c74); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                               data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
-                              <b><u>Dissolving Lyophilized IDT tccA Gene Fragment</u></b>
+                              <b><u>Dissolving Lyophilized IDT TccA Gene Fragment</u></b>
                             </button>
                           </h2>
                           <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen">
@@ -1041,7 +1243,7 @@
                           <h2 class="accordion-header" id="headingFifteen">
                             <button style="font-family: 'Montserrat', sans-serif; font-size: 27px; font-weight: bold; color: #333; background: -webkit-linear-gradient(#8bedbb, #005c74); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                               data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
-                              <b><u>PCR Reaction Mix Preparation for tccA Gene Amplification</u></b>
+                              <b><u>PCR Reaction Mix Preparation for TccA Gene Amplification</u></b>
                             </button>
                           </h2>
                           <div id="collapseFifteen" class="accordion-collapse collapse" aria-labelledby="headingFifteen">
@@ -1200,7 +1402,7 @@
                           <h2 class="accordion-header" id="headingSixteen">
                             <button style="font-family: 'Montserrat', sans-serif; font-size: 27px; font-weight: bold; color: #333; background: -webkit-linear-gradient(#8bedbb, #005c74); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                               data-bs-target="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">
-                              <b><u>Gradient PCR for TCCA gene</u></b>
+                              <b><u>Gradient PCR for TccA gene</u></b>
                             </button>
                           </h2>
                           <div id="collapseSixteen" class="accordion-collapse collapse" aria-labelledby="headingSixteen">
