--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -3,7 +3,7 @@
 {% block sidebar_content %}
 <ul class="nav nav-pills flex-column mb-auto">
   <li class="nav-item">
-    <a href="#section1" class="nav-link link-dark" aria-current="page">
+    <a href="#sectionone" class="nav-link link-dark" aria-current="page">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#home" />
       </svg>
@@ -11,7 +11,7 @@
     </a>
   </li>
 <li>
-    <a href="#section2" class="nav-link link-dark">
+    <a href="#sectiontwo" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#speedometer2" />
       </svg>
@@ -19,7 +19,7 @@
     </a>
   </li>
   <li>
-    <a href="#section3" class="nav-link link-dark">
+    <a href="#sectionthree" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#table" />
       </svg>
@@ -27,7 +27,7 @@
     </a>
   </li>
   <li>
-    <a href="#section4" class="nav-link link-dark">
+    <a href="#sectionfour" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#grid" />
       </svg>
@@ -35,7 +35,7 @@
     </a>
   </li>
   <li>
-    <a href="#section5" class="nav-link link-dark">
+    <a href="#sectionfive" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -44,7 +44,7 @@
   </li>
 
   <li>
-    <a href="#section6" class="nav-link link-dark">
+    <a href="#sectionsix" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -53,7 +53,7 @@
   </li>
 
   <li>
-    <a href="#section7" class="nav-link link-dark">
+    <a href="#sectionseven" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -62,7 +62,7 @@
   </li>
 
     <li>
-    <a href="#section8" class="nav-link link-dark">
+    <a href="#sectioneight" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -70,7 +70,7 @@
     </a>
   </li>
   <li>
-    <a href="#section9" class="nav-link link-dark">
+    <a href="#sectionnine" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -79,7 +79,7 @@
   </li>
 
   <li>
-    <a href="#section10" class="nav-link link-dark">
+    <a href="#sectionten" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -88,7 +88,7 @@
   </li>
 
   <li>
-    <a href="#section11" class="nav-link link-dark">
+    <a href="#sectioneleven" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -97,7 +97,7 @@
   </li>
 
   <li>
-    <a href="#section12" class="nav-link link-dark">
+    <a href="#sectiontwelve" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -105,7 +105,7 @@
     </a>
   </li>
   <li>
-    <a href="#section13" class="nav-link link-dark">
+    <a href="#sectionthirteen" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -113,7 +113,7 @@
     </a>
   </li>
   <li>
-    <a href="#section14" class="nav-link link-dark">
+    <a href="#sectionfourteen" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -121,7 +121,7 @@
     </a>
   </li>
   <li>
-    <a href="#section15" class="nav-link link-dark">
+    <a href="#sectionfifteen" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -129,7 +129,7 @@
     </a>
   </li>
   <li>
-    <a href="#section16" class="nav-link link-dark">
+    <a href="#sectionsixteen" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -137,7 +137,7 @@
     </a>
   </li>
   <li>
-    <a href="#section17" class="nav-link link-dark">
+    <a href="#sectionseventeen" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -145,7 +145,7 @@
     </a>
   </li>
   <li>
-    <a href="#section18" class="nav-link link-dark">
+    <a href="#sectioneighteen" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -153,7 +153,7 @@
     </a>
   </li>
   <li>
-    <a href="#section20" class="nav-link link-dark">
+    <a href="#sectiontwenty" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -161,7 +161,7 @@
     </a>
   </li>
   <li>
-    <a href="#section21" class="nav-link link-dark">
+    <a href="#sectiontwentyone" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -169,7 +169,7 @@
     </a>
   </li>
   <li>
-    <a href="#section22" class="nav-link link-dark">
+    <a href="#sectiontwentytwo" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -177,7 +177,7 @@
     </a>
   </li>
   <li>
-    <a href="#section23" class="nav-link link-dark">
+    <a href="#sectiontwentythree" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -185,7 +185,7 @@
     </a>
   </li>
   <li>
-    <a href="#section24" class="nav-link link-dark">
+    <a href="#sectiontwentyfour" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -193,7 +193,7 @@
     </a>
   </li>
   <li>
-    <a href="#section25" class="nav-link link-dark">
+    <a href="#sectiontwentyfive" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
