--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -209,6 +209,9 @@
 
 {% block page_content %}
 <div class="content">
+  <p class="mt-5 MAIN-STUFF" id="section1">Protocol of experiments</p>
+
+
                               <div class="m-2 mb-16">
                                 <div class="accordion" id="accordionExample">
                                   <div class="accordion-item">
