--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -209,7 +209,7 @@
 
 {% block page_content %}
 <div class="content">
-  <p class="mt-5 MAIN-STUFF" id="section1">Protocol of experiments</p>
+  <p class="mt-5 MAIN-STUFF" id="section1"><b>Protocol of experiments</b></p>
 
 
                               <div class="m-2 mb-16">
@@ -2192,6 +2192,7 @@
                             </div>
                               </div>
                               <div class="ratio ratio-16x9">
+                                <p class="mt-5 MAIN-STUFF" id="section1"><b>Troubleshooting</b></p>
               <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/troubleshooting.pdf"
                 allowfullscreen></iframe>
             </div>
