Changes made according to pooja

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -314,7 +314,7 @@
         <h2 class="accordion-header" id="headingFive">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-            <b>DKS Hippocampus, Kanakapura Village (Outside Bangalore), Karnataka—8th July 2023 </b>
+            <b>DKS Hippocampus, Kanakapura Village (Outside Bangalore), Karnataka—Date: 08/07/2023 </b>
           </button>
         </h2>
         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive">
@@ -359,7 +359,7 @@
         <h2 class="accordion-header" id="headingSix">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-            <b>The Samhita Academy, Bangalore—12th July 2023 </b>
+            <b>The Samhita Academy, Bangalore——Date: 12/07/2023 </b>
           </button>
         </h2>
         <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix">
@@ -527,6 +527,9 @@
 
               <img class="img-fluid rounded mx-auto d-block"
                 src="https://static.igem.wiki/teams/4641/wiki/education/india-literacy-project.png" style="scale:0.85"
+                >
+              <img class="img-fluid rounded mx-auto d-block"
+                src="https://static.igem.wiki/teams/4641/wiki/education/india-literacy-project.jpeg" style="scale:0.5"
                 >
 
             <div class="ratio ratio-16x9">
@@ -940,10 +943,16 @@
             </h2>
             <div id="collapseTwenty" class="accordion-collapse collapse" aria-labelledby="headingTwenty">
               <div class="accordion-body">
-                <p>In an attempt to gauge the understanding of working professionals about synthetic biology, GMOs, and
-                  bioremediation, a few of our team members conducted personal interviews with their family members. They asked them basic
+                <p>In an attempt to gauge the understanding of working professionals <b>about synthetic biology, GMOs, and
+                  bioremediation</b>, a few of our team members conducted personal interviews with their family members. They asked them basic
                   questions about the same. We recorded their responses and conducted an online education session based
                   on the topics that needed more clarity and awareness.</p>
+                  <p>The interview sessions entailed four major questions including “What is synthetic biology?”, “What are GMOs?”, “What are  your thoughts on GMOs?”, and “What do you understand by bioremediation?”. Coming from various regional and educational backgrounds, our families’ answers varied a great deal. They ranged from them having no idea about it to detailed descriptions. Some of them even pointed out applications of synthetic biology and GMOs. One thing that remained more or less common across everyone was the fact that they were open to the implementation of GMOs if and only if proper safety measures were followed. </p><br>
+<p>What stood out to us from these sessions was the fact that our participation in iGEM had helped our parents and siblings get a better understanding about certain scientific terms. A few of their answers mentioned that they had heard these terms from us or seen it in our Project Promotion video. Our main goal with these sessions was to ensure that <b>education begins at home and spreads across the local community</b>!</ p><br>
+                <p>
+                  We held an education session that was geared at working professionals. A thorough introduction to iGEM and synthetic biology was given throughout the session, with special emphasis placed on the <b>issue of triclocarban (TCC) accumulation in the environment</b> and our proposed solution, which involves using synthetic biology to modify bacteria for eco-friendly TCC degradation. This initiative was aimed at fostering a welcoming environment. The Q&A session was a high point because it allowed us to address a wide range of queries, such as those regarding the containment of their solution, the project's scalability, and cost analysis for the bioreactor. To guarantee that the guests departed with a <b>better knowledge about the complexities of the project</b>, we addressed their questions in plain words.<br><br>
+                </p>
+
                 <div class="ratio ratio-16x9">
                   <iframe src="https://static.igem.wiki/teams/4641/wiki/education/working-professionals-ppt.pdf"
                     allowfullscreen></iframe>
@@ -1075,28 +1084,36 @@
                 <ol>
                   <li><u>Big Data Challenges in Genomics and Proteomics:</u> Explored the complexities of managing large
                     datasets, providing insights for researchers <a
-                      href="https://medium.com/@manipalbiomachines.igem/big-data-challenges-in-genomics-and-proteomics-d22b3a134a8d"
-                      target="_blank">https://medium.com/@manipalbiomachines.igem/big-data-challenges-in-genomics-and-proteomics-d22b3a134a8d</a>
+                      <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/article4.pdf"
+                allowfullscreen></iframe>
+                      </div>
                   </li>
                   <li><u>The Power of POSH - Post Translation Switch:</u> Introduced the potential of POSH, showcasing
-                    innovative applications. <a
-                      href="https://medium.com/@manipalbiomachines.igem/the-power-of-posh-post-translation-switch-be6b6922d4bd"
-                      target="_blank">https://medium.com/@manipalbiomachines.igem/the-power-of-posh-post-translation-switch-be6b6922d4bd</a>
+                    innovative applications. 
+                      <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/article3.pdf"
+                allowfullscreen></iframe>
+                      </div>
                   </li>
                   <li><u>Bioremediation in Space Exploration:</u> Explored the intersection of bioremediation and space,
-                    fostering cross-disciplinary interest.<a
-                      href="https://medium.com/@manipalbiomachines.igem/bioremediation-in-space-exploration-5fb3483ec1de"
-                      target="_blank">https://medium.com/@manipalbiomachines.igem/bioremediation-in-space-exploration-5fb3483ec1de</a>
+                    fostering cross-disciplinary interest.
+                      <div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/article2.pdf"
+                allowfullscreen></iframe>
+                      </div>
                   </li>
                   <li><u>Environmental Remediation Using Genetically Engineered Organisms:</u> Discussed practical
-                    applications of synthetic biology in environmental solutions.<a
-                      href="https://medium.com/@manipalbiomachines.igem/environmental-remediation-using-genetically-engineered-organisms-4a03decb96be"
-                      target="_blank">https://medium.com/@manipalbiomachines.igem/environmental-remediation-using-genetically-engineered-organisms-4a03decb96be</a>
+                    applications of synthetic biology in environmental solutions.<div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/article1.pdf"
+                allowfullscreen></iframe>
+                      </div>
                   </li>
                   <li><u>Synthetic Biology - A Confluence of Biology and Engineering:</u> Highlighted the history and
-                    potential of synthetic biology while explaining iGEM and our project "CarbanEl."<a
-                      href="https://medium.com/@manipalbiomachines.igem/in-an-age-where-science-fiction-seamlessly-transitions-into-reality-the-captivating-realm-of-5b6d60d63ccf"
-                      target="_blank">https://medium.com/@manipalbiomachines.igem/in-an-age-where-science-fiction-seamlessly-transitions-into-reality-the-captivating-realm-of-5b6d60d63ccf</a>
+                    potential of synthetic biology while explaining iGEM and our project "CarbanEl."<div class="ratio ratio-16x9">
+              <iframe src="https://static.igem.wiki/teams/4641/wiki/education/article5.pdf"
+                allowfullscreen></iframe>
+                      </div>
                   </li>
                 </ol>
                 These articles were thoughtfully implemented as part of our educational outreach efforts. They were
@@ -1256,11 +1273,7 @@
                 <div class="container mb-3">
                   <div class="row">
                     <div class="col-md-6">
-                      <img src="https://static.igem.wiki/teams/4641/wiki/education/music-compostion.png"
-                        class="img-fluid mt-4">
-                    </div>
-                    <div class="col-md-6">
-                      <img src="https://static.igem.wiki/teams/4641/wiki/education/music-composition-2.png"
+                      <video src="https://video.igem.org/w/c7vmZysi4VUPx52ac1vVww"
                         class="img-fluid mt-4">
                     </div>
                   </div>
@@ -1310,6 +1323,42 @@
                 <div class="ratio ratio-16x9">
                   <iframe src="https://static.igem.wiki/teams/4641/wiki/education/bioart.pdf" allowfullscreen></iframe>
                 </div>
+                <div id="carouselExampleControls8" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/bioart-competition.jpeg"
+                style="scale:0.50;">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/bioart-results.png"
+                style="scale:0.50;">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/img-20230920-221915-omkar-prabhu-2.jpg"
+                style="scale:0.50;">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/img-0641-isha-uttam-1.jpeg"
+                style="scale:0.50;">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/insta-1.jpeg"
+                style="scale:0.50;">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/insta-2.jpeg"
+                style="scale:0.50;">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls8" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only visually-hidden">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls8" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only visually-hidden">Next</span>
+          </a>
+        </div>
               </div>
             </div>
           </div>
@@ -1377,6 +1426,10 @@
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-6.png"
+                style="scale:0.50;">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/asare-7.png"
                 style="scale:0.50;">
             </div>
           </div>
