testing no img-fluid

--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -52,7 +52,7 @@
                     <p class="mt-5 sub-stuff"><i>“Inclusive growth should not be a mere slogan but a fundamental driving force for sustainable development.”</i><br>
 - Mr. Pranab Mukherjee, Former President of India.<br><br> </p>
                 <figure>
-                    <img class="img-fluid" style="scale:0.5;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
+                    <img style="scale:0.5;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
                     <figcaption style="text-align:center">This mind map depicts how we’ve aimed to make our project inclusive to different communities</figcaption>
                 </figure>
 
