fixed comic and teamphoto

--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -52,7 +52,7 @@
                     <p class="mt-5 sub-stuff"><i>“Inclusive growth should not be a mere slogan but a fundamental driving force for sustainable development.”</i><br>
 - Mr. Pranab Mukherjee, Former President of India.<br><br> </p>
                 <figure>
-                    <img style="scale:0.5;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
+                    <img class="img-fluid" style="scale:0.5;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
                     <figcaption style="text-align:center">This mind map depicts how we’ve aimed to make our project inclusive to different communities</figcaption>
                 </figure>
 
@@ -69,7 +69,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
             <p class="mt-5 sub-stuff"> Our team members come from different states of India, adding great diversity to our team. Being inclusive of the community has been one of our primary goals from the very beginning of the project. During the initial ideation of the project, we put in considerable effort to understand the preferred pronouns of our fellow teammates. The diversity that we bring to the table with various cultures and regions has been something of great help to us, providing us a chance to learn more about the others.<br> </p>
 
-            <img class="img-fluid" style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
+            <img class="img-fluid" style="scale:0.3;" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/team-photo-2.jpg"> 
 
             <p class="mt-5 MAIN-STUFF" id="section3"><b>Crossing Language Barriers</b></p>
 
@@ -167,7 +167,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
     </ul>
 
     <div class="ratio ratio-16x9">
-          <iframe src="https://static.igem.wiki/teams/4641/wiki/inclusivity/team-photo-2.jpg" allowfullscreen></iframe>
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/inclusivity/synbiocomicstrip.pdf" allowfullscreen></iframe>
     </div>
 
       <ul class="mt-5 sub-stuff>
