--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -299,8 +299,61 @@
 <br><br><br>
 
                          </p>
-                         <br><br><br>
-                         <p class="mt-5 MAIN-STUFF" id="section11">References<br></p>
+                         <br>
+                         <p class="mt-5 MAIN-STUFF" id="section11">Kill Switch<br></p><br><br>
+                         <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
+                           We have ideated a CRISPR-based kill switch for the biocontainment of our genetically modified organism, <i>Acinetobacter baylyi</i>. Our goal is to ensure that this modified bacteria does not escape into the environment. We plan to utilize a kill switch that will be triggered by blue light, and provide an effective containment mechanism.
+    <br>
+
+        The "Light-Induced Kill Switch" entails the use of a specific wavelength of light as the trigger for bacterial containment. The system relies on genetically engineered photoreceptors that respond to this light signal, which, when interrupted, leads to a chain of events resulting in cell death. [16][17][18]
+
+        <br>
+    We are building upon the kill switch designed by <b>iGEM USTC, NEU-China and Unesp_Brazil</b> [19][20][21]. The implementation of the project proposed by iGEM USTC was also done in wastewater treatment plants. By installing a blue light emitting device post our designed bioreactor, the process of our biocontainment becomes inexpensive and easier to control. We will be utilizing the two dimerized Photoreceptor VVDs and the linker molecule submitted by  iGEM USTC to the iGEM parts registry. </p>
+        <br>
+        <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> Table of parts submitted by iGEM USTC 2019: [19]</p><br>
+    <table border="1">
+        <tr>
+            <td>Positive Photoreceptor</td>
+            <td>Negative Photoreceptor</td>
+            <td>Linker molecule</td>
+        </tr>
+        <tr>
+            <td>BBa_K2660009</td>
+            <td>BBa_K2660008</td>
+            <td>BBa_K105012</td>
+        </tr>
+    </table>
+    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"><b><u>Design of our guide RNA:</u></b></p>
+    <br>
+    <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
+       
+        The gRNA consists of target and PAM sequence. Literature survey to identify genes that are essential to the natural metabolism of <i>Acinetobacter baylyi</i> was done. Targeting genes essential for the survival of <i>Acinetobacter baylyi</i> will ensure that we achieve specific cell death. 
+
+    <br>
+    In <i>Acinetobacter baylyi</i>, ACIAD1150 (called pyrC for short) and ACIAD1419 were identified as genes responsible to express pyrimidine ribonucleotides which serve as integral molecules. Researchers tried to remove the pyrC gene, but were unsuccessful, suggesting that this gene is irreplaceable by another gene in the bacterium. Thus, they found that the pyrC gene is really crucial for the survival of the bacterium [22].
+    <br>We obtained the sequence of the ACIAD1150 from the <i>Actinobacter baylyi</i> genome database.[23] <br>
+<!--Insert fasta picture-->
+To ensure that this sequence did not exist in any other organism, we ran a FASTA search with a higher expectation value and a lower gap penalty. The closest match apart from <i>Acinetobacter baylyi</i>, with 90% identity, was found to be <i>Acinetobacter baumannii</i> [24].<br>
+<br>
+<!--Insert Blast-->
+We analyzed the use of <i>Acinetobacter baumannii</i> in wastewater treatment plants, to ensure that an off target effect did not occur. After conducting a literature review, we can conclude that <i>Acinetobacter baumanii</i> was found to be non essential for the smooth operation of wastewater treatment plants  and is found to be harmful in most treatment plants due to its pathogenic nature[25][26].<br>
+<br>By utilizing the ACIAD1150 gene, (the last 100 base pairs were removed due to limitations by the tool) we designed different versions of the guide RNA using an online tool [27].  A sequence that can bind to the 895th amino acid of ACIAD1150 and has a 92% on target accuracy was identified.<br>
+<br>
+
+<!--Insert tabular column-->
+To further bolster the stability of our kill switch, we will engineer the plasmid carrying the kill switch to be antibiotic-independent for maintenance by using an alternative mechanism such as reporter genes, auxotrophic marker and host specific origin of replication. This prevents potential interference from antibiotic resistance evolution [28][29]. <br>
+<br>
+Extensive laboratory and environmental testing needs to be done, to validate the efficacy of our kill switch. The results obtained will be assessed to identify if the kill switch is activated under conditions of blue light in the environment. This will lead to selective and efficient elimination of our modified bacteria. This validation must be conducted in controlled environments as well as in simulated wastewater treatment conditions to mimic real-world scenarios.<br>
+<br>
+As an alternative to our initial plan, if our proposed light-induced kill switch doesn't prove effective, we intend to develop a CRISPR-based kill switch for the biocontainment of our genetically modified <i>Acinetobacter baylyi</i>[30]. This alternative kill switch is designed to activate in response to elevated chlorine levels, providing a reliable containment mechanism. <br>
+<br>
+The proposed design would include a two-input system. By integrating genetic components sensitive to chlorine-induced stress, high chlorine concentrations can be dectected. To ensure genetic stability, we plan to incorporate functional redundancy within the circuit and modulate the SOS response [31].<br>
+
+</p>
+
+
+
+                         <p class="mt-5 MAIN-STUFF" id="section12">References<br></p>
                          <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
                           [1]Yun, H., Liang, B., Qiu, J., Zhang, L., Zhao, Y., Jiang, J., & Wang, A. (2017). Functional characterization of a novel amidase involved in biotransformation of triclocarban and its dehalogenated congeners in Ochrobactrum sp. TCC-2. Environmental Science & Technology, 51(1),291-300. <a href="https://doi.org/10.1021/acs.est.6b04885">https://doi.org/10.1021/acs.est.6b04885</a>
                           <br><br><br>
