Changes to nav bar

--- a/wiki/pages/experiments.html
+++ b/wiki/pages/experiments.html
@@ -3,201 +3,21 @@
 {% block sidebar_content %}
 <ul class="nav nav-pills flex-column mb-auto">
   <li class="nav-item">
-    <a href="#sectionone" class="nav-link link-dark" aria-current="page">
+    <a href="#section1" class="nav-link link-dark" aria-current="page">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#home" />
       </svg>
-      TCC Detection: Preparation of Standards (Using Water as Solvent)
-    </a>
-  </li>
-<li>
-    <a href="#sectiontwo" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#speedometer2" />
-      </svg>
-      TCC Detection: Preparation of Standards (Using Acetone as Solvent)
-    </a>
-  </li>
-  <li>
-    <a href="#sectionthree" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#table" />
-      </svg>
-      TCC Detection: Preparation of Standards (Using Acetonitrile as Solvent)
-    </a>
-  </li>
-  <li>
-    <a href="#sectionfour" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#grid" />
-      </svg>
-      Reviving of Culture
-    </a>
-  </li>
-  <li>
-    <a href="#sectionfive" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Confirmatory test- Catalase test
+      Protocol of experiments
     </a>
   </li>
 
+  
   <li>
-    <a href="#sectionsix" class="nav-link link-dark">
+    <a href="#section2" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
-      Confirmatory test- Gram Staining
-    </a>
-  </li>
-
-  <li>
-    <a href="#sectionseven" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Confirmatory test- Indole spot test
-    </a>
-  </li>
-
-    <li>
-    <a href="#sectioneight" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Confirmatory test- Methyl Red and Voges-Proskauer test
-    </a>
-  </li>
-  <li>
-    <a href="#sectionnine" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Preparation of Standards for TCC Detection (99% Water and 1% TCC + Acetonitrile)
-    </a>
-  </li>
-
-  <li>
-    <a href="#sectionten" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Growth curve for growth of bacteria in the presence of Acetonitrile
-    </a>
-  </li>
-
-  <li>
-    <a href="#sectioneleven" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Preparation of standards for TCC detection (for LCMS)
-    </a>
-  </li>
-
-  <li>
-    <a href="#sectiontwelve" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Growth curve for culture at a chosen pH
-    </a>
-  </li>
-  <li>
-    <a href="#sectionthirteen" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Dissolving Lyophilized IDT TccA Gene Fragment
-    </a>
-  </li>
-  <li>
-    <a href="#sectionfourteen" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Dissolving lyophilized tccA primers
-    </a>
-  </li>
-  <li>
-    <a href="#sectionfifteen" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      PCR Reaction Mix Preparation for TccA Gene Amplification
-    </a>
-  </li>
-  <li>
-    <a href="#sectionsixteen" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Gradient PCR for TccA gene
-    </a>
-  </li>
-  <li>
-    <a href="#sectionseventeen" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Plasmid Isolation
-    </a>
-  </li>
-  <li>
-    <a href="#sectioneighteen" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      PCR cleanup
-    </a>
-  </li>
-  <li>
-    <a href="#sectiontwenty" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Testing enzyme effectivity with single and and double digestion
-    </a>
-  </li>
-  <li>
-    <a href="#sectiontwentyone" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Gibson Assembly
-    </a>
-  </li>
-  <li>
-    <a href="#sectiontwentytwo" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Competent cell preparation and Transformation of Gibson assembled tccA + pET22b+ to E.coli dh5alpha/BL21 using CaCl2 method
-    </a>
-  </li>
-  <li>
-    <a href="#sectiontwentythree" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Colony PCR
-    </a>
-  </li>
-  <li>
-    <a href="#sectiontwentyfour" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      Running of Gel Electrophoresis
-    </a>
-  </li>
-  <li>
-    <a href="#sectiontwentyfive" class="nav-link link-dark">
-      <svg class="bi me-2" width="16" height="16">
-        <use xlink:href="#people-circle" />
-      </svg>
-      SDS-PAGE for protein analysis
+      Troubleshooting
     </a>
   </li>
 </ul>
@@ -2192,7 +2012,7 @@
                             </div>
                               </div>
                               <div class="content">
-  <p class="mt-5 MAIN-STUFF" id="section1"><b>Protocol of experiments</b></p>
+  <p class="mt-5 MAIN-STUFF" id="section2"><b>Protocol of experiments</b></p>
 
                               <div class="ratio ratio-16x9">
                                 
