--- a/wiki/pages/attributions.html
+++ b/wiki/pages/attributions.html
@@ -44,7 +44,7 @@
     <div class="m-5 mb-16">
         <p class="mt-5 MAIN-STUFF" id="section1">Attributions<br></p>
         <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">
-	The iGEM team of MIT-MAHE understands the importance of giving credit	where it is due. The attributions page acknowledges the hard work, 		dedication, and creativity of all members of the team. Further, this 	project would not have been possible without the support of our	mentors,advisors, external contractors, PIs and secondary PIs.
+	The iGEM team of MIT-MAHE understands the importance of giving credit	where it is due. The attributions page acknowledges the hard work, 		dedication, and creativity of all members of the team. Further, this 	project would not have been possible without the support of our PIs, secondary PIs, mentors, advisors and external contractors.
 <br>
  More detailed descriptions of the team members contributions to the project as well as external attributions can be found in the attribution form below.
 
