--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -62,6 +62,13 @@
                       <li>
                         <a href="#section11" class="nav-link link-dark">
                           <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                          Toggling Mechanism
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="#section12" class="nav-link link-dark">
+                          <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
                           References
                         </a>
                       </li>
